--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,13 +17,8 @@
     "moduleResolution": "node",
     "isolatedModules": true,
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
     "allowJs": true
   },
-  "include": ["index.ts"],
-  "ts-node": {
-    "transpileOnly": true,
-    "resolveJsonModule": true,
-    "transpiler": "ts-node/transpilers/swc-experimental"
-  }
+  "include": ["index.ts"]
 }
