--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
   "name": "@plasmo-corp/mwu",
-  "version": "1.8.0",
+  "version": "2.0.0",
   "description": "Mozilla Webstore Upload",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist"
   ],
   "scripts": {
-    "dev": "run-p dev:*",
-    "dev:type": "tsc -w --emitDeclarationOnly",
-    "dev:code": "esbuild index.ts --bundle --watch --platform=node --outdir=dist",
-    "build": "run-p build:*",
-    "build:type": "tsc --emitDeclarationOnly",
-    "build:code": "esbuild index.ts --bundle --minify --platform=node --outdir=dist",
+    "dev": "tsup index.ts --format esm --watch --sourcemap inline",
+    "build": "tsup index.ts --format esm --dts-resolve",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf dist",
-    "prepare": "run-s clean build"
+    "prepublishOnly": "run-s clean build"
   },
   "repository": {
     "type": "git",
@@ -37,10 +34,10 @@
   "devDependencies": {
     "@plasmo-corp/rps": "1.2.1",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
-    "@types/node": "17.0.21",
-    "esbuild": "0.14.27",
-    "prettier": "2.6.0",
+    "@types/node": "17.0.23",
+    "prettier": "2.6.1",
     "rimraf": "3.0.2",
-    "typescript": "4.6.2"
+    "tsup": "5.12.1",
+    "typescript": "4.6.3"
   }
 }
