--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "@plasmo-corp/mwu",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Mozilla Webstore Upload",
-  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "type": "module",
   "files": [
     "dist"
   ],
   "scripts": {
-    "dev": "tsup index.ts --format esm --watch --sourcemap inline",
-    "build": "tsup index.ts --format esm --dts-resolve",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "esbuild src/index.ts --format=esm --bundle --watch --sourcemap --platform=node --outdir=dist --external:got --external:jsonwebtoken",
+    "#dev": "tsup src/index.ts --target=node16 --format esm --watch --sourcemap",
+    "build": "tsup src/index.ts --minify --dts-resolve",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "clean": "rimraf dist",
     "prepublishOnly": "run-s clean build"
   },
@@ -29,14 +30,23 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "sign-addon": "3.11.0"
+    "got": "12.0.2",
+    "jsonwebtoken": "8.5.1",
+    "form-data-encoder": "1.7.1",
+    "formdata-node": "4.3.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "8.5.8",
+    "@jest/globals": "27.5.1",
     "@plasmo-corp/rps": "1.2.1",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
     "@types/node": "17.0.23",
+    "esbuild": "0.14.27",
+    "cross-env": "7.0.3",
+    "jest": "27.5.1",
     "prettier": "2.6.1",
     "rimraf": "3.0.2",
+    "ts-jest": "27.1.4",
     "tsup": "5.12.1",
     "typescript": "4.6.3"
   }
