--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@plasmo-corp/mwu",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "Mozilla Webstore Upload",
   "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -32,24 +32,24 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "got": "12.0.2",
-    "jsonwebtoken": "8.5.1",
-    "form-data-encoder": "1.7.1",
-    "formdata-node": "4.3.2"
+    "form-data-encoder": "1.7.2",
+    "formdata-node": "4.3.2",
+    "got": "12.0.3",
+    "jsonwebtoken": "8.5.1"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "8.5.8",
     "@jest/globals": "27.5.1",
     "@plasmo-corp/rps": "1.2.1",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
-    "@types/node": "17.0.23",
-    "esbuild": "0.14.27",
+    "@types/jsonwebtoken": "8.5.8",
+    "@types/node": "17.0.25",
     "cross-env": "7.0.3",
+    "esbuild": "0.14.36",
     "jest": "27.5.1",
-    "prettier": "2.6.1",
+    "prettier": "2.6.2",
     "rimraf": "3.0.2",
     "ts-jest": "27.1.4",
-    "tsup": "5.12.1",
+    "tsup": "5.12.5",
     "typescript": "4.6.3"
   }
 }
