--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@plasmohq/mwu",
-  "version": "2.2.2",
+  "version": "2.2.3",
   "description": "Mozilla Webstore Upload",
   "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "@jest/globals": "28.1.0",
-    "@plasmo-corp/rps": "1.3.0",
+    "@plasmohq/rps": "1.3.1",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
     "@types/jsonwebtoken": "8.5.8",
     "@types/node": "17.0.34",
