--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@plasmohq/mwu",
-  "version": "2.2.3",
-  "description": "Mozilla Webstore Upload",
+  "name": "@plasmohq/mozilla-addons-api",
+  "version": "2.3.0",
+  "description": "Mozilla Add-ons API for NodeJS",
   "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "type": "module",
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/plasmo-corp/mwu.git"
+    "url": "https://github.com/PlasmoHQ/mozilla-addons-api.git"
   },
   "author": "Plasmo Corp. <support@plasmo.com>",
   "keywords": [
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "@jest/globals": "28.1.0",
-    "@plasmohq/rps": "1.3.1",
+    "@plasmohq/rps": "1.3.3",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
     "@types/jsonwebtoken": "8.5.8",
     "@types/node": "17.0.34",
