--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "scripts": {
     "dev": "esbuild src/index.ts --format=esm --bundle --watch --sourcemap --platform=node --outdir=dist --external:got --external:jsonwebtoken",
     "build": "tsup src/index.ts --format esm --minify --dts-resolve",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "test": "run-s test:*",
+    "test:zip": "mb test-zip",
+    "test:e2e": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "clean": "rimraf dist",
     "prepublishOnly": "run-s clean build"
   },
@@ -34,16 +36,18 @@
   "dependencies": {
     "form-data-encoder": "2.1.2",
     "formdata-node": "5.0.0",
-    "got": "12.4.1",
+    "got": "12.5.0",
     "jsonwebtoken": "8.5.1"
   },
   "devDependencies": {
     "@jest/globals": "29.0.3",
     "@plasmohq/rps": "1.5.1",
+    "@plasmohq/mystic-box": "1.3.13",
     "@trivago/prettier-plugin-sort-imports": "3.3.0",
     "@types/jsonwebtoken": "8.5.9",
     "@types/node": "18.7.18",
     "cross-env": "7.0.3",
+    "fflate": "0.7.3",
     "esbuild": "0.15.8",
     "jest": "29.0.3",
     "prettier": "2.7.1",
