--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "node": ">=16.14"
   },
   "scripts": {
-    "dev": "esbuild src/index.ts --format=esm --bundle --watch --sourcemap --platform=node --outdir=dist --external:got --external:jsonwebtoken",
-    "build": "tsup src/index.ts --format esm --minify --dts-resolve",
+    "dev": "tsup src/index.ts --format esm --watch --sourcemap inline",
+    "build": "tsup src/index.ts --format esm --dts-resolve --minify --clean",
     "test": "run-s test:*",
     "test:zip": "mb test-zip",
     "test:e2e": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
-    "clean": "rimraf dist",
-    "prepublishOnly": "run-s clean build"
+    "prepublishOnly": "run-s build test"
   },
   "repository": {
     "type": "git",
@@ -51,7 +50,6 @@
     "fflate": "0.7.3",
     "jest": "29.0.3",
     "prettier": "2.7.1",
-    "rimraf": "3.0.2",
     "ts-jest": "29.0.2",
     "tsup": "6.2.3",
     "typescript": "4.8.3"
