--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,10 @@
     "esModuleInterop": true,
     "noImplicitAny": false,
     "moduleResolution": "node",
-    "isolatedModules": true,
     "module": "es2022",
     "target": "es2022",
     "allowJs": true,
-    "importsNotUsedAsValues": "error"
+    "verbatimModuleSyntax": true
   },
   "include": ["src/**/*.ts"]
 }
