--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "noImplicitReturns": true,
     "esModuleInterop": true,
     "noImplicitAny": false,
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "module": "es2022",
     "target": "es2022",
     "allowJs": true,
