--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jsonwebtoken": "9.0.0"
   },
   "devDependencies": {
+    "@plasmo/config": "workspace:*",
     "@jest/globals": "29.5.0",
     "@plasmohq/mystic-box": "1.4.0",
     "@plasmohq/prettier-plugin-sort-imports": "3.6.4",
