--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,11 @@
 {
+  "extends": "@plasmo/config/ts/utils.json",
   "compilerOptions": {
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
       "~*": ["./src/*"]
-    },
-    "resolveJsonModule": true,
-    "sourceMap": true,
-    "strict": false,
-    "declaration": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
-    "esModuleInterop": true,
-    "noImplicitAny": false,
-    "moduleResolution": "nodenext",
-    "module": "es2022",
-    "target": "es2022",
-    "allowJs": true,
-    "verbatimModuleSyntax": true
+    }
   },
   "include": ["src/**/*.ts"]
 }
